# headless_pm

./: .dockerignore  .gitignore  CLAUDE.md  INTEGRATION.md  README.md  REPOSITORY_INTEGRATION_STATUS.md  config.json  context.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env-example  headless_pm_client.py  migrate_service_ping.py  migrate_to_text_columns.py  package-lock.json  roadmap-V3.txt  run_tests.sh  start.sh
agent_instructions/: FIELD_USAGE_GUIDE.md  README.md  architect.md  backend_dev.md  frontend_dev.md  pm.md  qa.md
agents/: README.md  env-example
api/: Dockerfile  README.md
cli/: README.md
dashboard/: DASHBOARD_ISSUES_REPORT.md  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
docs/: API_TASK_MANAGEMENT_REFERENCE.md  AUTO_GIT_REPOSITORY_IMPLEMENTATION_PLAN.md  CHANGELOG.md  COMPONENT_ARCHITECTURE.md  DOCKER_INFRASTRUCTURE.md  FILESYSTEM_SECURITY.md  JSON_ESCAPING_GUIDE.md  LLM_AGENT_SETUP.md  PROJECT_MANAGEMENT.md  SAMPLE_AGENT_WORKFLOW.md  SERVICE_MANAGEMENT.md  STATUS_FLOW_DIAGRAM.md  TASK_STATUS_GUIDE.md  VERSION_MANAGEMENT.md  headless_pm.sql  promotion_strategy.md  social_media_posts.md
examples/: agent_workflow_example.py  client.py  create_document_curl.sh
mcp/: Dockerfile  README.md
migrations/: add_agent_status_column.py  add_project_support.py  add_repository_fields.py  add_task_type_column.py  migrate_connection_type.py  (+7 more)
setup/: README.md  create_claude_venv.sh  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup_dev_env.sh  universal_setup.sh
(+217 files in other folders)
