[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-ai-scaffolding"
version = "0.1.0"
description = "A framework/scaffolding which makes it easier to integrate PydanticAI with various LLMs and tools. Includes also full fledged usage tracking and reporting."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name="Timo Railo", email="firstname@east.fi" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "typer>=0.15.2",
    "tabulate>=0.9.0",
    "sqlmodel>=0.0.8",
    "pymysql",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "rich>=13.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pydantic_llm_tester" = ["**/*.json", "**/*.tmpl", "**/*.yaml", "**/*.yml", "**/*.txt", "**/*.csv", "**/*.md", ".env.example"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
asyncio_default_fixture_loop_scope = "function"
